traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: rococo
spec:
  entryPoints:                      
    - web
  routes:                           
  - kind: Rule
    match: Host(`testnet-manager.localhost`)
    services:                       
    - kind: Service
      name: testnet-manager
      namespace: rococo
      port: 80                      
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
  namespace: monitoring
spec:
  entryPoints:                      
    - web
  routes: 
  - kind: Rule
    match: Host(`grafana.localhost`)
    services:                       
    - kind: Service
      name: kube-prometheus-stack-grafana
      namespace: monitoring
      port: 80
  - kind: Rule
    match: Host(`alertmanager.localhost`)
    services:                       
    - kind: Service
      name: kube-prometheus-stack-alertmanager
      namespace: monitoring
      port: 9093
  - kind: Rule
    match: Host(`prometheus.localhost`) 
    services:                       
    - kind: Service
      name: kube-prometheus-stack-prometheus
      namespace: monitoring
      port: 9090
